--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -14,7 +14,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="../../../../../Downloads/h5bp-html5-boilerplate-3cd1967/js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="../../../../../../Downloads/h5bp-html5-boilerplate-3cd1967/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -25,7 +25,7 @@
         <p>Hello world! This is HTML5 Boilerplate.</p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../../../../../Downloads/h5bp-html5-boilerplate-3cd1967/js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="../../../../../../Downloads/h5bp-html5-boilerplate-3cd1967/js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
