--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>Title</title>
 
-    <template>include/css.html</template>
+    <include>include/css.html</include>
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://yui.yahooapis.com/3.9.0/build/yui/yui.js"></script>
 
     <script type="text/javascript" src="js/yui_util.js"></script>
-    <script type="text/javascript" src="js/templates.js"></script>
+    <script type="text/javascript" src="js/includes.js"></script>
     <script type="text/javascript" src="js/base.js"></script>
 </head>
 
@@ -19,7 +19,7 @@
 
 <body class="container-fluid">
 
-<template>include/navigation.html</template>
+<include>include/navigation.html</include>
 
 
 <div class="row-fluid">
