use absolute paths in sample index resources

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -5,13 +5,13 @@
 
     <include>include/css.html</include>
 
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://yui.yahooapis.com/3.9.0/build/yui/yui.js"></script>
 
-    <script type="text/javascript" src="js/yui_util.js"></script>
-    <script type="text/javascript" src="js/includes.js"></script>
-    <script type="text/javascript" src="js/base.js"></script>
+    <script type="text/javascript" src="/js/yui_util.js"></script>
+    <script type="text/javascript" src="/js/includes.js"></script>
+    <script type="text/javascript" src="/js/base.js"></script>
 </head>
 
 
